# 12-orbit-bot

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  main_func.h  send_event.h  test_main_func.cpp
blank/: main.cpp  main_func.h  my_brain.h  screenshot.h  send_event.h  state.h  text_to_image.py
examples/airfoil_self_noise/data/: data_set.xml  neural_network.xml  training_strategy.xml
examples/iris_plant/data/: neural_network.xml  training_strategy.xml
examples/logical_operations/data/: neural_network.xml  training_strategy.xml
examples/pima_indians_diabetes/data/: neural_network.xml  training_strategy.xml
examples/urinary_inflammations_diagnosis/data/: neural_network.xml  training_strategy.xml
examples/yacht_hydrodynamics_design/data/: neural_network.xml
opennn1/: neural_network.cpp
